# dev-soleil-aerotechensemble

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  README.md  aerotechensembleds.spec
lib/: AbstractAerotech.h  Makefile
recipe/: build.sh  meta.yaml
src/: AerotechBox.cpp  AerotechBoxStateMachine.cpp  ClassFactory.cpp  README.md
src/lib/: CMakeLists.txt  cA3200.h  cEnsemble.h
src/lib/win32/debug/: Class_lib.idb
vcproj/: Class_dll.vcxproj  Class_dll.vcxproj.filters  Class_lib.vcxproj  EnsembleExpert.sln  Server_shared.vcxproj  Server_shared.vcxproj.filters  Server_static.vcxproj  Server_static.vcxproj.filters  UpgradeLog.htm
